A refugee can create and update a profile
  * a mediator can see the profiles of the refugees he is following

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -1,5 +1,5 @@
 %h1 Comme À La Maison
 
-= link_to t(:sign_in_refugee), new_refugee_session_path
-= link_to t(:sign_in_mediator), new_mediator_session_path
+= link_to t(:sign_in_refugee), profile_path
+= link_to t(:sign_in_mediator), refugees_path
 
