--- a/app/views/refugees/index.haml
+++ b/app/views/refugees/index.haml
@@ -1,2 +1,5 @@
-<h1>Refugees#index</h1>
-<p>Find me in app/views/refugees/index.html.erb</p>
+%h1 Following
+
+%ul
+  - @refugees.each do |refugee|
+    = link_to "#{refugee.name} #{refugee.firstname}", refugee_path(refugee)
