A mediator can confirm and unconfirm a refugee profile

--- a/app/views/refugees/index.haml
+++ b/app/views/refugees/index.haml
@@ -2,4 +2,7 @@
 
 %ul
   - @refugees.each do |refugee|
-    = link_to "#{refugee.name} #{refugee.firstname}", refugee_path(refugee)
+    %li
+      = link_to "#{refugee.name} #{refugee.firstname}", refugee_path(refugee)
+      \-
+      = refugee.confirmed ? t(:profile_valid) : t(:profile_not_valid)
