A host can edit his profile

--- a/app/views/pages/landing.haml
+++ b/app/views/pages/landing.haml
@@ -1,5 +1,8 @@
 %h1 Comme À La Maison
 
 = link_to t(:sign_in_refugee), profile_path
+|
 = link_to t(:sign_in_mediator), refugees_path
+|
+= link_to t(:sign_in_host), dashboard_path
 
