--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -15,6 +15,10 @@
       = current_mediator.email
       |
       = link_to t(:logout), destroy_mediator_session_path, method: 'delete'
+    - if host_signed_in?
+      = link_to current_host.email, edit_host_path(current_host)
+      |
+      = link_to t(:logout), destroy_host_session_path, method: 'delete'
 
     %p{class: "notice"}= notice
     %p{class: "alert"}= alert
