--- a/app/views/refugees/_show.haml
+++ b/app/views/refugees/_show.haml
@@ -1,5 +1,5 @@
 %ul
-  %li= current_refugee.name
-  %li= current_refugee.firstname
-  %li= "#{current_refugee.age} #{t(:year_old)}"
-  %li= current_refugee.nationality
+  %li= @refugee.name
+  %li= @refugee.firstname
+  %li= "#{@refugee.age} #{t(:year_old)}"
+  %li= @refugee.nationality
