--- a/app/views/refugees/show.haml
+++ b/app/views/refugees/show.haml
@@ -1,8 +1,9 @@
-%h1= @refugee.name
+%h1= "Profile of #{@refugee.name} #{@refugee.firstname}"
+
+= render 'show'
+
 - if @refugee.confirmed
-  = link_to t(:unconfirm_profile), unconfirm_refugee_path(@refugee)
-  |
+  = link_to t(:unconfirm_profile), unconfirm_refugee_path(@refugee), class: "btn btn-danger"
 - else
-  = link_to t(:confirm_profile), confirm_refugee_path(@refugee)
-  |
-= link_to t(:back), refugees_path
+  = link_to t(:confirm_profile), confirm_refugee_path(@refugee), class: "btn btn-success"
+= link_to t(:back), refugees_path, class: "btn btn-default"
