Mediator can edit his profile

--- a/app/views/refugees/show.haml
+++ b/app/views/refugees/show.haml
@@ -6,4 +6,4 @@
   = link_to t(:unconfirm_profile), unconfirm_refugee_path(@refugee), class: "btn btn-danger"
 - else
   = link_to t(:confirm_profile), confirm_refugee_path(@refugee), class: "btn btn-success"
-= link_to t(:back), refugees_path, class: "btn btn-default"
+= link_to t(:back), refugees_path, class: "btn btn-link"
