--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,7 +11,7 @@
       = current_refugee.email
       = link_to t(:logout), destroy_refugee_session_path, method: 'delete', class: 'btn btn-default'
     - if mediator_signed_in?
-      = current_mediator.email
+      = link_to current_mediator.email, edit_mediator_path(current_mediator), class: 'btn btn-link'
       = link_to t(:logout), destroy_mediator_session_path, method: 'delete', class: 'btn btn-default'
     - if host_signed_in?
       = link_to current_host.email, edit_host_path(current_host)
